add visualise example.